New matching program and library
A new matching library and program have been added to Gnuastro. Currently
it only works on catalogs. In the future, it will also return the rotation
matrix to match images or give the matrix to register two catalogs. So this
is just the start of an exciting new tool in Gnuastro.

Other changes that were done with this commit:

 - We were using custom functions to parse comma-separated floating point
   numbers (possibly as fractions) for each program (in Crop and
   MakeProfiles until this commit). Since we needed a similar operation in
   Match, a new `gal_options_parse_csv_float64' function was defined and is
   now used in those programs is well.

 - In the book, in the description of `gal_table_read', we claim that if
   NULL is given to `cols', then the whole table will be returned. But it
   was not behaving like this. It would return NULL when `cols==NULL'. This
   behavior is now corrected to be as described in the book.

 - Following the change above, in the Table program, we now pring the
   column in formation cleanly in a separate function.

 - The new `gal_box_bound_ellipse_extent' is added to the library to give
   the exact (floating point) extent of an ellipse. `gal_box_bound_ellipse'
   also uses this function now.

 - `gal_checkset_dataset_name' is now available to return the file name
   (and possible HDU if its a FITS file) as a string. This is useful in
   error messages where the input can be plain text or FITS.

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,17 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
+  Manual/Book: An extended tutorial is added showing some general
+  applications of almost all the programs. This may be a good place to get
+  a feeling of how Gnuastro is intended to be used and some of the
+  programs.
+
+  New Program and library: Match is a new program that will match two given
+  inputs (currently catalogs). Its output is the re-arranged inputs with
+  the same number of rows/records such that all the rows match. The main
+  work is also done with the new `gal_match_catalog' library function which
+  can also be used in other contexts.
+
   All programs: a value of `0' to the `--numthreads' option will use the
   number of threads available to the system at run time.
 
@@ -86,6 +97,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   `gal_txt_write' and `gal_fits_tab_write' now accept an extension name as
   argument to allow a name for the FITS extension they write.
+
+  `gal_box_bound_ellipse_extent' will return the maximum extent of an
+  ellipse along each axis from the ellipse center in floating point.
 
 ** Removed features
 
